--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^26.0.0",
     "mammoth": "^1.9.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.14.2",
     "mongoose": "^8.9.4",
     "node-cron": "^3.0.3",
     "pdf-parse": "^1.1.1",
